create list destination

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pesona SULUT</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/custom.css" />
   </head>
   <body>
@@ -33,7 +33,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/wisata/">Tempat Wisata</a>
+              <a class="nav-link" href="Wisata/index.html">Tempat Wisata</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/blog/">Blog</a>
