--- a/wisata/index.html
+++ b/wisata/index.html
@@ -223,6 +223,7 @@
           </div>
         </div>
       </div>
+      <button type="button" class="btn btn-outline-dark">Show More</button>
     </div>
   </div>
   <!-- KONTEN WEBSITE -->
