--- a/wisata/index.html
+++ b/wisata/index.html
@@ -52,15 +52,15 @@
   <!-- KONTEN WEBSITE -->
 
   <div class="container-fluid vh-100" style="
-        background-image: url(../assets/img/brama-djabar-TG4UvuBVJXE-unsplash.jpg);
+        background-image: url(../assets/img/Manado.jpg);
         background-position: center;
         background-size: cover;
       ">
     <div class="text-shadow text-center text-white w-100 position-absolute top-50 start-50 translate-middle">
       <h1 class="p-3 p-sm-3 p-md-5 pb-md-0 fw-bolder display-1">
-        Selamat Datang di Sulawesi Utara.
+        Bersiaplah untuk mengeksplor Sulawesi Utara.
       </h1>
-      <p class="p-3 p-sm-3 p-md-3 pb-md-0 display-6 fs-3">
+      <p class=" p-3 p-sm-3 p-md-3 pb-md-0 display-6 fs-3">
         Jelajahi Keindahan Alam dan Budaya yang Memikat
       </p>
     </div>
@@ -141,37 +141,6 @@
                 Kerajinan tangan unik di pasar tradisional, saksikan pertunjukan
                 tari dan musik tradisional atau ikuti perayaan bersama
                 masyarakat lokal.
-              </p>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <a href="">
-            <img src="../assets/img/dimitry-b-LbrtLtsZXY4-unsplash.jpg" width="320" height="320"
-              class="card-img-top object-fit-cover" />
-            <div class="card-body">
-              <h5 class="card-title">Petualangan yang Tak Terlupakan</h5>
-              <p class="card-text">
-                Menyelam di terumbu karang yang memukau, mendaki gunung yang
-                menantang, ini petualangan bagi setiap jenis wisatawan yang
-                datang.
-              </p>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <a href="https://getbootstrap.com/docs/5.3/getting-started/introduction/">
-            <img src="../assets/img/sea-star-starfish-2336889_640.jpg" width="320" height="320"
-              class="card-img-top object-fit-cover" />
-            <div class="card-body">
-              <h5 class="card-title">Keajaiban Alam yang Memukau</h5>
-              <p class="card-text">
-                Jelajahi keanekaragaman hayati di Taman Nasional Bunaken, atau
-                melihat matahari terbenam yang memukau di Pulau Manado Tua.
               </p>
             </div>
           </a>
