create detail destination

--- a/wisata/index.html
+++ b/wisata/index.html
@@ -70,8 +70,8 @@
     <div class="p-5 pt-0 mb-4 row row-cols-1 row-cols-sm-2  row-cols-md-3 g-5 flex-nowrap overflow-x-auto">
       <div class="col">
         <div class="card h-100">
-          <a href="#">
-            <img src="../assets/img/sea-star-starfish-2336889_640.jpg" width="320" height="320"
+          <a href="../detailTempatWisata/index.html">
+            <img src="../assets/img/bunaken1.jpg" width="320" height="320"
               class="card-img-top object-fit-cover" />
             <div class="card-body">
               <h5 class="card-title">Keajaiban Alam yang Memukau</h5>
@@ -110,21 +110,6 @@
                 Menyelam di terumbu karang yang memukau, mendaki gunung yang
                 menantang, ini petualangan bagi setiap jenis wisatawan yang
                 datang.
-              </p>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card h-100">
-          <a href="#">
-            <img src="../assets/img/sea-star-starfish-2336889_640.jpg" width="320" height="320"
-              class="card-img-top object-fit-cover" />
-            <div class="card-body">
-              <h5 class="card-title">Keajaiban Alam yang Memukau</h5>
-              <p class="card-text">
-                Jelajahi keanekaragaman hayati di Taman Nasional Bunaken, atau
-                melihat matahari terbenam yang memukau di Pulau Manado Tua.
               </p>
             </div>
           </a>
