--- a/privasi/index.html
+++ b/privasi/index.html
@@ -1,52 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+  
+<head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Pesona SULUT</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../css/custom.css">
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      body {
+        font-size: 14px;
+      }
+      .v199_184 {
+        width: 100%;
+        height: 1912px;
+        background: rgba(255,255,255,1);
+        opacity: 1;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        overflow: hidden;
+      }
+      .name {
+        color: #fff;
+      }
+      .name {
+        color: #fff;
+      }
+      .v283_119 {
+        width: 100%;
+        height: 554px;
+        background: url("../assets/img/privacy.jpg");
+        background-size: cover;
+        opacity: 1;
+        position: absolute;
+        top: 100px;
+        left: 0px;
+        border-top-left-radius: 53px;
+        border-top-right-radius: 53px;
+        border-bottom-left-radius: 53px;
+        border-bottom-right-radius: 53px;
+        overflow: hidden;
+      }
+      .v283_116 {
+        width: 985px;
+        height: 1270px;
+        background-repeat: no-repeat;
+        background-position: center center;
+        background-size: cover;
+        opacity: 1;
+        position: absolute;
+        top: 343px;
+        left: 227px;
+        overflow: hidden;
+        backdrop-filter: blur(30px);
+      }
+      .v283_115 {
+        width: 985px;
+        height: 100%;
+        background: rgba(255,255,255,0.6299999952316284);
+        opacity: 1;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        border: 1px solid rgba(36,36,36,1);
+        border-top-left-radius: 40px;
+        border-top-right-radius: 40px;
+        border-bottom-left-radius: 40px;
+        border-bottom-right-radius: 40px;
+        overflow: hidden;
+      }
+      .v283_97 {
+        width: 632px;
+        color: rgba(0,0,0,1);
+        position: absolute;
+        top: 51px;
+        left: 177px;
+        opacity: 1;
+        text-align: left;
+      }
+      .v283_97 h1 {
+        margin-bottom: 0;
+      }
+      .v283_97 h2 {
+        margin-bottom: 1px;
+      }
+      .v283_97 ul {
+        margin-top: 0;
+      }
+
+
+    </style>
   </head>
   <body>
     <!-- NAVIGASI -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary p-4">
+    <nav class="navbar navbar-expand-lg p-4 z-1 blur sticky-top border-bottom border-dark-subtle">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Pesona <b>SULUT</b>.</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../"
-                >Beranda</a
-              >
+              <a class="nav-link active" aria-current="page" href="../index.html">Beranda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/wisata/">Tempat Wisata</a>
+              <a class="nav-link" href="#">Tempat Wisata</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blog/">Blog</a>
+              <a class="nav-link" href="../blog/index.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/login/">Login</a>
+              <a class="nav-link text-primary fw-medium" href="../login/index.html">Login</a>
             </li>
           </ul>
           <form class="d-flex" role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Pencarian"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">Cari</button>
+            <input class="form-control me-2 blur" type="search" placeholder="Pencarian" aria-label="Search" />
+            <button class="btn btn-secondary" type="submit">Cari</button>
           </form>
         </div>
       </div>
@@ -54,38 +129,85 @@
     <!-- NAVIGASI -->
 
     <!-- KONTEN WEBSITE -->
-    <div class="w-100 vh-100">
-      <h1 class="position-absolute top-50 start-50 translate-middle">
-        PRIVASI
-      </h1>
+    <div class="v199_184">
+      <div class="name">
+
+      </div>
+      <div class="name">
+
+      </div>
+      <div class="v283_119">
+
+      </div>
+      <div class="v283_116">
+        <div class="v283_115">
+
+        </div>
+        <span class="v283_97">
+          <h1>Kebijakan Privasi</h1>
+          Diperbarui: 18 April 2024
+          <br><br>
+          Selamat datang di Pesona SULUT. Kebijakan privasi kami menjelaskan bagaimana 
+          kami mengumpulkan, menggunakan, melindungi, dan mengungkapkan informasi 
+          yang dikumpulkan dari pengguna (seterusnya disebut "Anda") ketika Anda 
+          menggunakan situs web kami.
+          <br><br>
+          <h2>Informasi yang Kami Kumpulkan</h2>
+          Kami dapat mengumpulkan informasi pribadi dari Anda ketika Anda mendaftar di 
+          situs web kami, berlangganan buletin, mengisi formulir, atau berinteraksi dengan 
+          fitur lainnya yang kami sediakan. Informasi yang kami kumpulkan dapat mencakup 
+          nama, alamat email, nomor telepon, dan informasi lainnya yang Anda berikan 
+          kepada kami.
+          <br><br>
+          <h2>Informasi</h2>
+          Informasi yang kami kumpulkan dapat digunakan untuk:
+          <ul>
+            <li>Mempersonalisasi pengalaman pengguna Anda dan menyediakan konten yang lebih sesuai dengan minat Anda.</li>
+            <li>Mengirimkan buletin dan materi pemasaran lainnya yang mungkin menarik bagi Anda.</li>
+            <li>Menanggapi pertanyaan, komentar, atau permintaan yang Anda kirim kepada kami.</li>
+            <li>Meningkatkan layanan kami dan mengelola situs web kami dengan lebih efektif.</li>
+          </ul>
+      
+      
+          <h2>Informasi</h2>
+          Kami mengimplementasikan berbagai langkah keamanan untuk melindungi informasi pribadi Anda dari akses yang tidak sah, penggunaan, atau pengungkapan yang tidak sah. Namun, diingatkan bahwa tidak ada sistem keamanan yang sempurna dan kami tidak dapat menjamin keamanan informasi yang ditransmisikan melalui internet.
+          <br><br>
+          <h2>kepada Pihak Ketiga</h2>
+          Kami tidak akan menjual, menukar, atau mentransfer informasi pribadi Anda kepada pihak ketiga tanpa izin Anda. Namun, informasi yang tidak dapat diidentifikasi secara pribadi dapat disediakan kepada pihak ketiga untuk tujuan pemasaran, periklanan, atau tujuan lainnya.
+          <br><br>
+          <h2>Informasi Pribadi Anda</h2>
+          Anda memiliki hak untuk mengakses, memperbarui, atau menghapus informasi pribadi Anda yang disimpan oleh kami. Jika Anda ingin melakukan hal ini atau memiliki pertanyaan lebih lanjut tentang kebijakan privasi kami, jangan ragu untuk menghubungi kami melalui informasi kontak yang tersedia di situs web kami.
+          <br><br>
+          <h2>Perubahan pada Kebijakan Privasi</h2>
+          Kami dapat memperbarui kebijakan privasi ini dari waktu ke waktu dengan memposting perubahan yang diperbarui di situs web kami. Anda disarankan untuk secara berkala meninjau kebijakan privasi ini agar tetap mengetahui informasi tentang bagaimana kami melindungi informasi yang dikumpulkan dari Anda.
+          Dengan menggunakan situs web kami, Anda menyetujui pengumpulan dan penggunaan informasi Anda sesuai dengan kebijakan privasi ini.
+          <br><br>
+          <h2>Hubungi Kami</h2>
+          Jika Anda memiliki pertanyaan atau masalah tentang kebijakan privasi ini, jangan ragu untuk menghubungi kami melalui support@pesonasulut.com.
+        </span>
+      </div>
     </div>
     <!-- KONTEN WEBSITE -->
 
     <!-- FOOTER -->
     <div class="container">
-      <footer
-        class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
-      >
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
         <p class="col-md-4 mb-0 text-body-secondary">
           © 2024 Pesona <b>SULUT</b>.
         </p>
-
+  
         <ul class="nav col-md-4 justify-content-end">
           <li class="nav-item">
-            <a href="/tentang/" class="nav-link px-2 text-body-secondary"
-              >Tentang Kami</a
-            >
+            <a href="/tentang/" class="nav-link px-2 text-body-secondary">Tentang Kami</a>
           </li>
           <li class="nav-item">
-            <a href="/privasi/" class="nav-link px-2 text-body-secondary"
-              >Kebijakan Privasi</a
-            >
+            <a href="/privasi/index.html" class="nav-link px-2 text-body-secondary">Kebijakan Privasi</a>
           </li>
         </ul>
       </footer>
     </div>
     <!-- FOOTER -->
 
-    <script async src="js/bootstrap.bundle.min.js"></script>
+    <script async src="../js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
